# sphinx-external-toc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: _toc.yml  conf.py  doc1.md  doc2.md  intro.md  other1.md  toc_tree.pptx
docs/example/: blanksubpage.md  index.md
docs/example/globfolder/: page1.md  page2.md
docs/example/subfolder/: page.md
docs/subfolder/: doc3.md
docs/subglobs/: glob1.md
docs/user_guide/: api.md  cli.md  sphinx.md
sphinx_external_toc/: __init__.py  _compat.py  api.py  cli.py  collectors.py  events.py  parsing.py  tools.py
tests/: conftest.py  test_api.py  test_cli.py  test_collectors.py  test_compat.py  test_parsing.py  test_sphinx.py  test_tools.py
tests/_bad_toc_files/: bad_option_value.yml  bad_url.yml  empty_items.yml  empty_part.yml  empty_parts.yml  empty_sections.yml  empty_subtrees.yml  file_and_glob_present.yml  items_in_glob.yml  items_in_url.yml  no_glob_match.yml  section_in_glob.yml  section_in_url.yml  unknown_keys.yml  unknown_keys_nested.yml
tests/_jb_migrate_toc_files/: chapters.yml  parts.yml
tests/_toc_files/: _toc.yml  basic.yml  basic_compressed.yml  doc1.rst  doc2.rst  doc3.rst  exclude_missing.yml  glob.yml  intro.rst  nested.yml  tableofcontents.yml
tests/_toc_files/subfolder/: doc4.rst
tests/_warning_toc_files/: contains_toctree.yml  file_not_in_toc.yml  multiple_tableofcontents.yml  no_glob_match.yml  tableofcontents_no_toc.yml
tests/test_api/: test_create_toc_dict_basic_compressed_.yml  test_create_toc_dict_exclude_missing_.yml  test_create_toc_dict_nested_.yml  test_file_to_sitemap_basic_.yml  test_file_to_sitemap_basic_compressed_.yml  test_file_to_sitemap_glob_.yml
tests/test_cli/: test_create_toc.txt
tests/test_parsing/: test_create_toc_dict__toc_.yml  test_create_toc_dict_basic_.yml  test_create_toc_dict_basic_compressed_.yml  test_create_toc_dict_exclude_missing_.yml  test_create_toc_dict_glob_.yml  test_create_toc_dict_nested_.yml  test_create_toc_dict_tableofcontents_.yml  test_file_to_sitemap_basic_.yml  test_file_to_sitemap_basic_compressed_.yml  test_file_to_sitemap_exclude_missing_.yml  test_file_to_sitemap_glob_.yml  test_file_to_sitemap_nested_.yml  test_file_to_sitemap_tableofcontents_.yml
tests/test_sphinx/: test_success_basic_.xml  test_success_basic_compressed_.xml  test_success_tableofcontents_.xml
tests/test_tools/: test_create_site_map_from_path.yml  test_file_to_sitemap_basic_.yml  test_file_to_sitemap_basic_compressed_.yml  test_file_to_sitemap_exclude_missing_.yml  test_file_to_sitemap_glob_.yml  test_file_to_sitemap_nested_.yml  test_file_to_sitemap_tableofcontents_.yml  test_migrate_jb_chapters_.yml  test_migrate_jb_jb_docs_toc_.yml  test_migrate_jb_list_and_nested_.yml  test_migrate_jb_numbered_chapters_.yml  test_migrate_jb_numbered_depth_.yml  test_migrate_jb_numbered_depth_parts_subset_.yml  test_migrate_jb_numbered_parts_.yml  test_migrate_jb_numbered_parts_subset_.yml  test_migrate_jb_simple_dict_.yml  test_migrate_jb_simple_list_.yml
tests/toc_files/: basic.yml
