[metadata]
name = sphinx_external_toc
version = attr: sphinx_external_toc.__version__
description = A sphinx extension that allows the site-map to be defined in a single YAML file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/sphinx-external-toc
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords = sphinx extension toc
project_urls =
    Documentation=https://sphinx-external-toc.readthedocs.io

[options]
packages = find:
install_requires =
    attrs>=19.2,<21
    click~=7.1
    pyyaml
    sphinx~=3.0
python_requires = ~=3.6
include_package_data = True
zip_safe = True

[options.entry_points]
console_scripts =
    sphinx-etoc = sphinx_external_toc.cli:main
jb.cmdline =
    toc = sphinx_external_toc.cli:main

[options.extras_require]
code_style =
    pre-commit~=2.12
rtd =
    myst-parser~=0.13.5
    sphinx_book_theme>=0.0.36
testing =
    coverage
    pytest>=3.6,<4
    pytest-cov
    pytest-regressions

[options.packages.find]
exclude =
    test*

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[flake8]
max-line-length = 100
extend-ignore = E203
